<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Tap4EuropeActivity!</string>
    <string name="app_name">Tap4Europe</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="help">help</string>
    <string name="share">Share</string>
    <string name="signin">Sign in with Facebook</string>
    <string name="splash_icon_description">Tap4Europe splash image</string>
    <string name="skip_login_message"><u>Skip login for now</u></string>
    <string name="points_text">Your Progress</string>
    <string name="points_desc">Points</string>
    <string name="points_bonus">Bonus Points</string>
    <string name="location">Location:</string>
    <string name="thumbnail_image">Thumbnail image of item</string>
</resources>